# Tiny-ViT-Transformer-from-scratch

./: .gitignore  README.md  pyproject.toml
tiny_vit_transformer_from_scratch/: train.py
tiny_vit_transformer_from_scratch/app/: main.py
tiny_vit_transformer_from_scratch/core/: config.py
tiny_vit_transformer_from_scratch/data/: utils.py  vit_custom_dataset.py  vit_data_processor.py
tiny_vit_transformer_from_scratch/model/: utils.py  vit_block.py  vit_embedding.py  vit_feedforward.py  vit_glu_act_fun.py  vit_layernorm.py  vit_pos_encoding.py  vit_self_attention.py  vit_transformer.py
